# ShadowInfer

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements-lock.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: README.md  run_benchmarks.py
benchmarks/real_model/: __init__.py
configs/: model_fast_dllm_7b.yaml  optimize_full.yaml  policy_default.yaml  profiler_full.yaml  serving.yaml
dashboards/: grafana-template.json
exporter/: __init__.py
notebooks/: 01-introduction.ipynb
scripts/: run.py
shadowinfer/: __init__.py  __main__.py  orchestrator.py
shadowinfer/ab_testing/: __init__.py
shadowinfer/benchmarking/: __init__.py  benchmark_suite.py  regression.py  roofline.py
shadowinfer/core/: __init__.py  agent_plugin_registry.py  async_executor.py  base_agent.py  bus.py  config.py  model_backend.py  policy.py  scheduler.py  structs.py
shadowinfer/core/backends/: __init__.py  huggingface_backend.py  pytorch_backend.py  registry.py  sglang_backend.py  vllm_backend.py
shadowinfer/distributed/: __init__.py
shadowinfer/engineering/: __init__.py  degradation_circuit.py  hot_config.py  type_safety.py
shadowinfer/ffn_optimizer/: __init__.py  ffn_optimizer_agent.py  packed_weight.py
shadowinfer/kernels/: __init__.py  auto_tuning.py  dispatcher.py
shadowinfer/kernels/cpp/: bindings.cpp  fused_attention_quantized.cu  quantize_int4.cu  quantize_per_channel.cu  sparse_gemm.cu
shadowinfer/models/: __init__.py  simple_diffusion_llm.py
shadowinfer/observability/: __init__.py  dashboard.py  metrics.py  tracing.py
shadowinfer/profiler/: __init__.py  profiler_agent.py  reporter.py
shadowinfer/qdrift/: __init__.py  early_stopper.py  qdrift_agent.py
shadowinfer/serving/: __init__.py  backend.py  config.py  limiters.py  metrics.py  server.py
shadowinfer/shadowkv/: __init__.py  decision_plane.py  eviction_policy.py  importance_model.py  kv_cache_manager.py  packed_kv_cache.py  shadowkv_agent.py
shadowinfer/utils/: __init__.py  logging_utils.py  memory_utils.py  metrics.py  quantization.py
shadowinfer/web_profiler/: __init__.py  app.py
tests/: __init__.py  conftest.py  test_ab_testing.py  test_agent_plugin_registry.py  test_async_executor.py  test_backend_registry.py  test_base_agent.py  test_bus.py  test_distributed.py  test_engineering.py  test_exporter.py  test_ffn_channel_pruning.py  test_ffn_optimizer.py  test_huggingface_backend.py  test_integration.py  test_kernel_autotuning.py  test_kernels.py  test_logging_utils.py  test_observability.py  test_orchestrator.py  test_orchestrator_agent_plugins.py  test_orchestrator_early_stop.py  test_policy_engine.py  test_profiler.py  test_pytorch_backend.py  test_qdrift.py  test_qdrift_early_stopper.py  test_real_backend_integration.py  test_real_model_benchmark.py  test_regression.py  test_scheduler.py  test_serving.py  test_shadowkv.py  test_shadowkv_decision_plane.py  test_structs.py  test_utils.py  test_vllm_sglang_backend.py  test_web_profiler.py
